--- a/VetAppointment/VetAppointment.UI/Pages/AccountsOverview.razor
+++ b/VetAppointment/VetAppointment.UI/Pages/AccountsOverview.razor
@@ -1,7 +1,7 @@
 ﻿@page "/accountsoverview"
 
 <PageTitle>Account Overview</PageTitle>
-<h1>Login Prototype</h1>
+<h1 class="title-transition">Login Prototype</h1>
 
 @if (Account == null)
 {
