--- a/VetAppointment/VetAppointment.UI/Pages/AppointmentsOverview.razor
+++ b/VetAppointment/VetAppointment.UI/Pages/AppointmentsOverview.razor
@@ -1,5 +1,19 @@
 ﻿@page "/appointmentsoverview"
-<h2>AppointmentsOverview</h2>
+
+<style>
+    th, td {
+        vertical-align: middle;
+        text-align: center
+    }
+
+    tbody > tr:hover > td {
+        color: #000;
+        background-color: #E2E3E5;
+        border-color: #E2E3E5
+    }
+</style>
+
+<h2 class="title-transition">AppointmentsOverview</h2>
 @if (Appointments == null)
 {
     <p><em>Loading...</em></p>
