--- a/VetAppointment/VetAppointment.UI/Pages/PetsOverview.razor
+++ b/VetAppointment/VetAppointment.UI/Pages/PetsOverview.razor
@@ -1,6 +1,19 @@
 ﻿@page "/petsoverview"
 
-<h2>Pets Overview</h2>
+<style>
+    th, td {
+        vertical-align: middle;
+        text-align: center
+    }
+
+    tbody > tr:hover > td {
+        color: #000;
+        background-color: #E2E3E5;
+        border-color: #E2E3E5
+    }
+</style>
+
+<h2 class="title-transition">Pets Overview</h2>
 @if (Pets == null)
 {
     <p><em>Loading...</em></p>
